fix positioning on mobile

--- a/style.css
+++ b/style.css
@@ -34,8 +34,9 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  min-height: 100vh;
+  width: 100%;
   font-size: 15px;
   font-family: "Lexend Deca", sans-serif;
   color: var(--white);
@@ -44,7 +45,7 @@ body {
 
 main {
   max-width: 320px;
-  margin: 0 24px;
+  margin: 24px;
   padding-bottom: 30px;
   border-radius: 10px;
   overflow: hidden;
@@ -53,22 +54,23 @@ main {
 
 .hero-img-container {
   width: 320px;
+  height: 235px;
   position: relative;
 }
 
-.hero-img {
-  /* position: absolute; */
-  opacity: 0.7;
-  /* top: 0;
-  left: 0; */
-  width: 100%;
+.img-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
   height: auto;
+  background-color: #7611af;
 }
 
-.img-bg {
-  background-color: var(--violet);
-  height: 100%;
+.hero-img {
+  opacity: 0.4;
   width: 100%;
+  height: auto;
+  display: block;
 }
 
 .title {
